Add: bip39 to frontend; add: husky pre-push, pre-commit, post-checkout etc.; fix monorepo package.json(#3)
* remove server-side generated secret phrase

* bun run format

* bun run format 2

* chore

* add bip39 mnemonic generation

* fix makefile

* make generate-api

* update swag

* update workflow

* test

* add husky

* test husky

* test2

* chore: add husky and commitlint

* chore: remove tests from pre-push
